--- a/correct/index.html
+++ b/correct/index.html
@@ -33,53 +33,34 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
             -->
 
-    <title>Menu &#183; Learn with OwO</title>
+    <title>Correct &#183; Learn with OwO</title>
     <link
       rel="shortcut icon"
       href="../common/pic/rainbow.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../common/style.css" type="text/css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
-
-    <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
-    <script src="quiz.js"></script>
+    <script src="correct.js" defer></script>
   </head>
   <body>
     <div
-      class="container-fluid background mb-3 py-3 d-flex align-items-center vh-100"
+      class="container-fluid d-flex justify-content-center align-items-center background vh-100"
     >
       <div class="row w-100">
-        <div class="col-md-6 d-flex align-items-center">
-          <div class="question-menu w-100">
-            <h2 class="fs-5 fw-bold text-center">Animal Kingdom</h2>
-            <h3 class="fs-2 fw-bold text-center question-id"></h3>
-            <h3 class="fs-2 fw-bold text-center question"></h3>
-            <p class="text-muted fs-6 text-center">
-              ** Find tiger, dolphin, dog, hornbill and boar from textbook.
-              <br />
-              Take the animal image to the camera for answering the questions
-            </p>
-            <div class="d-md-flex justify-content-center d-none">
-              <img
-                src="../common/pic/gif/wait.gif"
-                alt=""
-                srcset=""
-                class="w-50"
-              />
-              <p class="answer"></p>
-            </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-6 col-12">
+          <h3 class="display-6 fw-bold text-center quote">Hello</h3>
+          <div class="d-flex justify-content-center">
+            <img alt="" class="w-100 my-4" id="gif" style="max-width: 450px" />
+          </div>
+          <div class="d-flex justify-content-center">
+            <a class="btn btn-primary w-100 next" style="max-width: 450px">
+              Next Question
+            </a>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="content w-100 background2" id="content">
-            <script src="sketch.js"></script>
-          </div>
-        </div>
+        <div class="col-3"></div>
       </div>
     </div>
-    <input type="hidden" id="answer" />
   </body>
 </html>
