--- a/menu/index.html
+++ b/menu/index.html
@@ -39,20 +39,21 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../common/style.css" type="text/css" />
+    <script src="../common/common.js"></script>
   </head>
 
   <body>
     <div class="container-fluid background p-md-5 mb-3">
       <div class="px-5 py-3 mb-4 rounded-3 background2 row">
         <div class="col-md-4 rounded-circle" style="background-color: #ef6951">
-          <img src="../common/pic/female.png" alt="" class="w-100" />
+          <img alt="" class="w-100" id="gender" />
         </div>
 
         <div class="col-md-8 p-md-5 p-2">
           <h1 class="display-5 fw-bold">
-            Hi, Xue Ren
+            Hi, <label class="name">Xue Ren</label>
             <label class="d-none d-md-inline display-6 fw-bold"
-              >from 1 Merah (2023)</label
+              >from <label class="class">1 Merah</label> (2023)</label
             >
           </h1>
           <div class="row d-md-flex d-none mb-2 background align-items-center">
@@ -60,15 +61,20 @@
               <img src="../common/pic/lion.png" alt="" class="w-100" />
             </div>
             <div class="col-sm-10 col-12">
-              <h5 class="display-5 fw-bold">Animal Kingdom</h5>
+              <h5 class="display-5 fw-bold">
+                <label class="quiz-name">Animal Kingdom</label>
+              </h5>
               <div
                 class="d-flex justify-content-start mx-0"
                 style="margin-top: -5px"
               >
                 <h6 class="display-9 pe-4">
-                  &#129489;&#127996;&#8205;&#127979; Teacher: Madam Kong
+                  &#129489;&#127996;&#8205;&#127979; Teacher:
+                  <label class="teacher">Miss Kong</label>
                 </h6>
-                <h6 class="display-9 px-4">&#128197; Due Date: 11-11-2023</h6>
+                <h6 class="display-9 px-4">
+                  &#128197; Due Date: <label class="quiz-due">11-11-2023</label>
+                </h6>
               </div>
             </div>
           </div>
@@ -79,31 +85,31 @@
                 <tr>
                   <th>Name</th>
 
-                  <td>: Chang Xue Ren</td>
+                  <td>: <label class="name">Xue Ren</label></td>
                 </tr>
 
                 <tr>
                   <th>Class</th>
 
-                  <td>: 1 Merah (Class 2023)</td>
+                  <td>: <label class="class">1 Merah</label> (Class 2023)</td>
                 </tr>
 
                 <tr>
                   <th>Quiz</th>
 
-                  <td>: Animal Kingdom</td>
+                  <td>: <label class="quiz-name">Animal Kingdom</label></td>
                 </tr>
 
                 <tr>
                   <th>Teacher</th>
 
-                  <td>: Madam Kong</td>
+                  <td>: <label class="teacher">Miss Kong</label></td>
                 </tr>
 
                 <tr>
                   <th>Due Date</th>
 
-                  <td>: 11-11-2023</td>
+                  <td>: <label class="quiz-due">11-11-2023</label></td>
                 </tr>
               </table>
             </div>
@@ -114,7 +120,7 @@
           </div>
 
           <div class="row">
-            <a class="btn btn-secondary col-md-4 col-12">
+            <a class="btn btn-secondary col-md-4 col-12 quiz-button">
               <label class="d-lg-block d-md-none d-sm-block"
                 >Start the Quiz Now</label
               >
