--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,7 @@
     />
     <link rel="stylesheet" href="../common/style.css" />
     <link rel="stylesheet" href="contact.css" />
-    <script src="start.js"></script>
+    <script src="contact.js"></script>
   </head>
   <body>
     <div
@@ -53,6 +53,7 @@
               src="../common/pic/teacher/Chinese.jpeg"
               alt=""
               class="w-100"
+              id="profile"
             />
           </div>
           <div class="col-md-8 p-md-5 px-2">
