--- a/correct/index.html
+++ b/correct/index.html
@@ -40,6 +40,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../common/style.css" type="text/css" />
+    <script src="../common/common.js"></script>
     <script src="correct.js" defer></script>
   </head>
   <body>
