--- a/quiz/index.html
+++ b/quiz/index.html
@@ -45,6 +45,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
 
     <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
+    <script src="../common/common.js"></script>
     <script src="quiz.js"></script>
   </head>
   <body>
